# XiuLian

./: .gitignore  README.md  article_cn.md
examples/: demo_agent.py
fusion_paradigm/: ARCHITECTURE.md  PROGRESS_REPORT.md  SETUP_GUIDE.md  evaluation.py  fusion_engine.py  fusion_training.py  minimal_train.py  quick_train.py  run_training.py  train_comprehensive.py  train_continuous.py  train_full.py  train_simple.py
fusion_paradigm/trained_model/: FINAL_REPORT.md  baseline_report.md  baseline_results.json  config.json  final_report.json  final_results.json  learned_rules.json  model.json  model_final.json  neural_module.json  session_state.json  symbolic_kb.json  training_log.json  training_report.json  training_summary.json
non_dl_ai_benchmark/: README.md  REFERENCES.md
non_dl_ai_benchmark/BENCHMARKS/: benchmark_suite.py  comprehensive_experiment.py  journal_visualization.py  matplotlib_visualization.py  standard_dataset_benchmark.py  update_article_figures.py
scripts/: generate_figures.py  run_benchmark.py
small_llm_training/: CHINA_GUIDE.md  LATEST_MODELS.md  PROJECT_README.md  QUICKSTART.md  README.md  START_HERE.md  install.sh  requirements.txt
xiulian/: LICENSE  README.md  __init__.py  api.py  app.py  benchmark.py  cli.py  core.py  gui.py  pyproject.toml
xiulian/data/: benchmark_results.json  experiment_results.json  knowledge.json
xiulian/pdf/: ARCHITECTURE.md
xiulian/tests/: conftest.py  test_core.py
xiulian_benchmark/: README.md  benchmark.py  download_baselines.py  quick_benchmark.py  run_all.sh  train_xiulian.py
(+37 files in other folders)
